# dorotron_0x002

./: .gitmodules  CMakeLists.txt  README.md
resources/: blur.fs  pute.fs
src/: channel.h  channelwav.h  debugtrack.h  euclideantrack.h  main.cc  parameterizable.h  sequencergui.h  stepsequencer.h  track.h
